--- a/Views/Tablet/maintabletview.kv
+++ b/Views/Tablet/maintabletview.kv
@@ -46,6 +46,7 @@
                                 NavigationButton:
                                     icon: "home"
                                     text: "Songs"
+                                    radius: [10, 0, 0, 10]
 
                                 NavigationButton:
                                     icon: "magnify"
@@ -58,6 +59,7 @@
                                 NavigationButton:
                                     icon: "chart-donut-variant"
                                     text: "Billboard"
+                                    radius: [0, 0, 10, 10]
 
                     MDAnchorLayout:
                         anchor_x: "right"
@@ -70,6 +72,7 @@
                                 width: 38
                                 height: 38
                                 pos_hint: {"center_x": .5, "center_y": .5}
+                                on_release: root.receive_screen_request('settings')
 
                             CommonIconButton:
                                 icon: "bell-outline"
@@ -77,7 +80,6 @@
                                 width: 38
                                 height: 38
                                 pos_hint: {"center_x": .5, "center_y": .5}
-
 
                 MDBoxLayout:
                     id: layout
